<resources>
    <string name="app_name">Zafroshops</string>

    <string name="title_section1">All Zops</string>
    <string name="title_section2">Add a Zop</string>
    <string name="title_section3">Refresh Location</string>
    <string name="title_section4">Remove Ads</string>
    <string name="title_section5">Nearest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="REQUEST_RESOLVE_ERROR">1001</string>

    <string name="action_settings">Settings</string>
    <string name="far_away">km away</string>
    <string name="loading_data">Loading data...</string>
    <string name="sending_data">Sending data...</string>
    <string name="location">Location</string>
    <string name="nopicture">No picture yet</string>
    <string name="otherDetails">Other details</string>
    <string name="phoneNumber">Phone number</string>
    <string name="openingHours">Opening hours</string>
    <string name="day0">Monday</string>
    <string name="day1">Tuesday</string>
    <string name="day2">Wednesday</string>
    <string name="day3">Thursday</string>
    <string name="day4">Friday</string>
    <string name="day5">Saturday</string>
    <string name="day6">Sunday</string>
    <string name="km">km</string>
    <string name="new_title">Add a new zop</string>
    <string name="new_name">Name</string>
    <string name="new_type">Type</string>
    <string name="new_country">Country</string>
    <string name="new_city">City</string>
    <string name="new_street">Street + Number</string>
    <string name="new_phonenumber">Phone number</string>
    <string name="new_details">Other details</string>
    <string name="new_name_hint">Enter a name</string>
    <string name="new_type_hint">Other Choose a catebory</string>
    <string name="new_country_hint">Choose a country</string>
    <string name="new_city_hint">Enter a town</string>
    <string name="new_street_hint">Enter a street</string>
    <string name="new_streetnumber_hint">##</string>
    <string name="new_phonenumber_hint">Enter a phone number</string>
    <string name="new_details_hint">Want to add something ?</string>
    <string name="no_zops_message">There seem to be no zops for your country</string>
    <string name="no_zops_add">Add a Zop</string>
    <string name="openings_edit">Edit opening hours</string>
    <string name="services_editing">Edit additional services</string>
    <string name="services_edit">Edit additional services</string>
    <string name="openings_editing">Editing opening hours</string>
    <string name="openings_day">Day:</string>
    <string name="openings_from">From:</string>
    <string name="openings_to">To:</string>
    <string name="openings_add">Add day/time</string>
    <string name="openings_delete">Delete day</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="openings_hours_label">Current opening hours</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="new_zop_success">Thanks for the new address :-)</string>
    <string name="new_zop_failed">Sorry, something went wrong :-(</string>
    <string name="new_zop_check_location">Check the address maybe ?</string>
    <string name="new_zop_location_error">Please enter a valid location</string>
    <string name="new_zop_name_error">Please enter a name</string>
    <string name="new_zop_name_taken_error">The name is already taken</string>
    <string name="menu_location_refresh">Refresh location</string>
    <string name="menu_zops_refresh">Refresh zops</string>
    <string name="menu_zop_add">Add</string>
    <string name="menu_zop_review">Review</string>
    <string name="menu_zop_call">Call</string>
    <string name="menu_zop_drive_to">Drive to</string>
    <string name="review_comments">Comments, Products, ...</string>
    <string name="review_select">Please select an option:</string>
    <string name="confirmation_been">I have been to this zop once</string>
    <string name="confirmation_know">I have heard of</string>
    <string name="confirmation_dont">I don\'t know this zop</string>
    <string name="website">http://www.zafroshops.com</string>
    <string name="website_short">zafroshops.com</string>
    <string name="website_visit">Visit the web site</string>
    <string name="zafroshops_email">info@zafroshops.com</string>
    <string name="zafroshops_fb_page">https://facebook.com/zafroshops</string>
    <string name="zafroshops_icon_url">http://zafroshops.com/Content/images/logo_white.png</string>
    <string name="email_subject">Subject</string>
    <string name="email_content">\n\nSent from Android</string>
    <string name="email_us">Drop us a line</string>
    <string name="remove_ads">Remove ads</string>
    <string name="toggle_geolocation">Use my location</string>
    <string name="facebook_share_title">Want to taste african ?</string>
    <string name="facebook_share_description">Check this website on places with african roots. Clubs, restaurant, shops and more are included. Do submit your local store if you didn\'t find it there. \nCheers ...</string>
    <string name="facebook_like_text">Like</string>
    <string name="splashscreen_sub">(c) 2015 by dynamite</string>
    <string name="splashscreen_main">zafroshops</string>
    <string name="ads_banner_unit_id">ca-app-pub-2514964223223347/1814620110</string>
    <string name="ads_interstitial_unit_id">ca-app-pub-2514964223223347/8475955710</string>
    <string name="facebook_app_id">293384604174089</string>
    <string name="no_call_allowed">The application is not allowed to make calls</string>
    <string name="help_msg_1">Thank you for using Zafroshops, the number one application for referencing afroshops around the world.\n\nWith this app you can see all afroshops (zops) referenced in your country.
        To do that, use the blue navigation drawer menu by tapping on the top left part of the app\n</string>
    <string name="help_msg_2">\nTo see all zops tap on \"All Zops\". The zops are first shown as categories e.g shops, bar, associations, …\n</string>
    <string name="help_msg_3">\nAfter selecting a category, you would see all zops for this category only.
        \n\nIf you feel, there is a zop you know and which is not referenced here, go to the menu and tap on \"Add a zop\". You\'ll be displayed a form to fill the zop data. Fill up the name and address at least. But, we\'ll be glad if you provide more infos like phone number, opening hours or additional services as these will help app users find the zop more easily.
        \n\nWe wish you a lot of fun with Zafroshops :-)\n
    </string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy">This application retrieves your location to provide you with the nearest possible store. Your location is neither shared nor tracked, it is merely saved on your device for later reuse.
  As long as you have enabled the access to the location, the previously saved location is updated whenever you click any "Refresh location" in the application menu.
  \n
  You can disable the access and use of location through the navigation drawer of the application by switching the button "Use my location" to "OFF".
  \n\n
  This application also retrieves the email associated with your google account merely to identify you when you purchase an In App Package. This information is whether shared nor saved by the app and serves only verification.
  \n\n
  This privacy policy is subject to change and was last updated on january, 2, 2017. If you have any questions, feel free to send an email to info@zafroshops.com.</string>
    <string name="privacy_text">privacy policy</string>

    <string name="help_ok">OK</string>
    <string name="help_title">Help</string>
    <string name="help_toggle">Don\'t show this message again</string>
    <string name="help_text">help</string>

    <string name="azure_site">@string/azure_site_ref</string>
    <string name="azure_mobile_service_app_key">@string/azure_mskey_ref</string>
    <string name="inappkey">@string/settings_iapkey</string>
    <bool name="debug">@bool/settings_debug</bool>
    <string name="hub">@string/azure_hub</string>
    <string name="hub_cs">@string/azure_hub_cs</string>
    <string name="api_name">@string/google_api_name</string>

    <string name="inappads">removeadvertisingproduct</string>
</resources>
