<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/help_msg_1"
                android:id="@+id/helpMsg1"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="31dp"
                android:src="@drawable/ic_dehaze"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/help_msg_2"
                    android:id="@+id/helpMsg2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shop"
                    android:layout_marginRight="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bar"
                    android:layout_marginRight="15dp"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/association"
                    android:layout_marginRight="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/help_msg_3"
                android:id="@+id/helpMsg3"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:textSize="14dp"
                android:id="@+id/help_toggle"
                android:text="@string/help_toggle"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>